# streamlit-demo

./: app.py  daily_customer_analysis.py  daily_sales_analysis.py  daily_sales_analysys.py  daily_sales_calendar.py  home.py  hourly_sales_analysis.py  pyproject.toml
data/: pos_data.csv
tools/: generate_mock_data.py
