[project]
name = "streamlit-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.12",
    "matplotlib>=3.10.1",
    "pillow>=11.1.0",
    "plotly>=6.0.1",
    "selenium>=4.30.0",
    "streamlit>=1.43.2",
    "uvicorn>=0.34.0",
    "webdriver-manager>=4.0.2",
]
